--- a/blocks/cover/__description/cover__description.css
+++ b/blocks/cover/__description/cover__description.css
@@ -11,3 +11,10 @@
     max-width: 280px;
     z-index: 1;
 }
+
+@media screen and (max-width: 320px){
+    .cover__description {
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
