--- a/blocks/cover/__img/cover__img.css
+++ b/blocks/cover/__img/cover__img.css
@@ -1,8 +1,20 @@
 .cover__img {
     width: 100%;
     max-width: 1184px;
+    height: 740px;
     background-size: cover;
     background-color:rgba(42, 44, 47, 0.3);
     background-blend-mode: multiply;
     background-image:url(/images/practicum-art-gallery-background-cover.jpg)
+}
+@media screen and (max-width: 768px){
+    .cover__img {
+        height: 746px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .cover__img {
+        height: 254px;
+    }
 }
