--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,9 +1,16 @@
 .cover__overlay {
     width: 100%;
+    height: 740px;
     position: absolute;
     opacity: 30%;
     background-color: #2A2C2F;
     max-width: 1184px;
     height: 740px;
     z-index: 1;
+}
+
+@media screen and (max-width: 768px){
+    .cover__overlay {
+        height: 746px;
+    }
 }
