--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,3 +4,9 @@
     justify-content: center;
     position: relative;
 }
+
+@media screen and (max-width: 320px){
+    .cover  {
+        margin: 64px auto ;
+    }
+}
