--- a/blocks/description/__subtitle/description__subtitle.css
+++ b/blocks/description/__subtitle/description__subtitle.css
@@ -6,3 +6,17 @@
     text-align: center; 
     max-width: 720px;
 }
+@media screen and (max-width: 768px){
+    .description__subtitle {
+        font-size: 30px;
+        line-height: 36px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .description__subtitle {
+        font-size: 16px;
+        line-height: 20px;
+        max-width: 288px;
+    }
+}
