--- a/blocks/description/__title/description__title.css
+++ b/blocks/description/__title/description__title.css
@@ -1,7 +1,26 @@
 .description__title {
+    font-family: Inter;
     font-size: 96px;
     font-weight: 900;
     line-height: 100px;
     max-width: 793px;
     text-align: center;
+}
+
+@media screen and (max-width: 768px){
+    .description__title {
+        font-size: 96px;
+        line-height: 100px;
+        max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .description__title {
+        font-size: 40px;
+        line-height: 44px;
+        max-width: 288px;
+
+
+    }
 }
