--- a/blocks/galery/galery.css
+++ b/blocks/galery/galery.css
@@ -1,11 +1,25 @@
 .galery {
     display: grid;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
     grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(2, auto);
     grid-gap: 16px;
     margin: 118px 48px 92px;
     max-width: 1184px;
+}
+
+@media screen and (max-width: 768px){
+    .galery {
+        grid-template-columns: repeat(2, auto);
+        grid-template-rows: repeat(4, auto);
+        margin: 90px 24px 88px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .galery {
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+        margin: 90px 16px 82px;
+        grid-gap: 12px;
+    }
 }
