--- a/blocks/intro/__quote/intro__quote.css
+++ b/blocks/intro/__quote/intro__quote.css
@@ -7,5 +7,18 @@
     text-align: left;
     margin-top: 40px;
     max-width: 720px;
+}
 
+@media screen and (max-width: 768px){
+    .intro__quote {
+        font-size: 24px;
+        line-height: 34px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .intro__quote {
+        font-size: 24px;
+        line-height: 30px;
+    }
 }
