--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,5 +6,11 @@
     line-height: 58px;
     text-align: left;
     max-width: 785px;
+}
 
+@media screen and (max-width: 320px){
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
 }
