--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,16 @@
     display: grid;
     margin: auto 148px;
 }
+
+@media screen and (max-width: 768px){
+    .intro {
+        margin: 64px 24px 40px;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .intro {
+        margin: 64px 16px 0;
+    }
+}
