--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,17 @@
     font-family: 'inter', Fallback, sans-serif;
     max-width: 1280px;
     margin: auto;
+    overflow-x: hidden;
 }
+@media screen and (max-width: 768px){
+    .page {
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .page {
+        max-width: 320px;
+    }
+}
+    
