--- a/blocks/places/__description-item/places__description-item.css
+++ b/blocks/places/__description-item/places__description-item.css
@@ -1,10 +1,22 @@
 .places__description-item {
     font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 29px;
-letter-spacing: 0em;
-text-align: left;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: left;
+}
 
+@media screen and (max-width: 768px){
+    .places__description-item {
+        font-size: 16px;
+        line-height: 26px;     
+    }
+}
+
+@media screen and (max-width: 320px){
+    .places__description-item  {
+        margin: auto 16px ;
+    }
 }
