--- a/blocks/places/__artist-name/places__artist-name.css
+++ b/blocks/places/__artist-name/places__artist-name.css
@@ -8,3 +8,10 @@
     text-align: left;
 
 }
+
+@media screen and (max-width: 380px){
+    .places__artist-name {
+        font-size: 14px;
+        line-height: 18px;
+    }
+}
