--- a/blocks/description/__subtitle/description__subtitle.css
+++ b/blocks/description/__subtitle/description__subtitle.css
@@ -13,6 +13,13 @@
     }
 }
 
+@media screen and (max-width: 490px){
+    .description__title {
+        font-size: 22px;
+        line-height: 25px;
+    }
+}
+
 @media screen and (max-width: 320px){
     .description__subtitle {
         font-size: 16px;
