--- a/blocks/description/__title/description__title.css
+++ b/blocks/description/__title/description__title.css
@@ -9,9 +9,14 @@
 
 @media screen and (max-width: 768px){
     .description__title {
-        font-size: 96px;
-        line-height: 100px;
         max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 490px){
+    .description__title {
+        font-size: 60px;
+        line-height: 65px;
     }
 }
 
