--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -26,6 +26,18 @@
     }
 }
 
+@media screen and (max-width: 780px){
+    .places__item {
+        gap: 48px 28px;
+    }
+}
+
+@media screen and (max-width: 780px){
+    .places__item {
+        gap: 48px 28px;
+    }
+}
+
 @media screen and (max-width: 320px){
     .places__item {
         grid-template-columns: auto;
