--- a/pages/index.css
+++ b/pages/index.css
@@ -8,7 +8,7 @@
 @import url("../blocks/description/__title/description__title.css");
 @import url("../blocks/description/__subtitle/description__subtitle.css");
 @import url("../blocks/description/__img/description__img.css");
-@import url("../blocks/intro/intro.css");
+@import url("../blocks/intro/__info/intro__info.css");
 @import url("../blocks/intro/__title/intro__title.css");
 @import url("../blocks/intro/__quote/intro__quote.css");
 @import url("../blocks/intro/__quote-author/intro__quote-author.css");
