--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -8,6 +8,10 @@
     z-index: 1;
 }
 
+.cover:hover {
+    opacity: 80%;
+}
+
 @media screen and (max-width: 768px){
     .cover__overlay {
         height: 746px;
