--- a/blocks/description/__subtitle/description__subtitle.css
+++ b/blocks/description/__subtitle/description__subtitle.css
@@ -5,6 +5,7 @@
     line-height: 36px;
     text-align: center;
     max-width: 720px;
+    margin: 0;
 }
 @media screen and (max-width: 768px){
     .description__subtitle {
