--- a/blocks/intro/__quote/intro__quote.css
+++ b/blocks/intro/__quote/intro__quote.css
@@ -7,6 +7,7 @@
     text-align: left;
     margin-top: 40px;
     max-width: 720px;
+    margin: 40px 0 10px;
 }
 
 @media screen and (max-width: 768px){
