--- a/blocks/cover/__description/cover__description.css
+++ b/blocks/cover/__description/cover__description.css
@@ -8,7 +8,7 @@
     line-height: 22px;
     letter-spacing: 0em;
     max-width: 280px;
-    z-index: 1;
+    margin: 0;
 }
 
 @media screen and (max-width: 320px){
