--- a/pages/index.css
+++ b/pages/index.css
@@ -32,6 +32,7 @@
 @import url("../blocks/cover/__img/cover__img.css");
 @import url("../blocks/cover/__overlay/cover__overlay.css");
 @import url("../blocks/cover/__title/cover__title.css");
+@import url("../blocks/cover/__text-box/cover__text-box.css");
 @import url("../blocks/cover/__description/cover__description.css");
 @import url("../blocks/cover/__btn/cover__btn.css");
 @import url("../blocks/footer/footer.css");
