--- a/blocks/places/__artist-box/places__artist-box.css
+++ b/blocks/places/__artist-box/places__artist-box.css
@@ -1,6 +1,7 @@
 .places__artist-box {
-    position: absolute;
-    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
 }
 
 @media screen and (max-width: 320px){
