--- a/blocks/cover/__info/cover__info.css
+++ b/blocks/cover/__info/cover__info.css
@@ -1,11 +1,10 @@
 .cover__info {
     display: flex;
     flex-direction: column;
-    position: absolute;
     align-content: center;
     gap: 32px;
-    top: 32%;
-    margin: 0;
+    margin-top: 25%;
+
 }
 
 @media screen and (max-width: 320px){
