--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -19,20 +19,25 @@
     }
 }
 
-@media screen and (max-width: 380px){
+@media screen and (max-width: 540px){
     .places__title {
-        font-size: 22px;
+        font-size: 28px;
         line-height: 28px;
         margin: auto 16px;
     }
 }
 
+@media screen and (max-width: 430px){
+    .places__title {
+        font-size: 22px;
+        line-height: 22px;
+    }
+}
 
 @media screen and (max-width: 320px){
     .places__title {
         font-size: 32px;
         line-height: 35px;
-        margin: auto 16px;
     }
 }
 
