--- a/blocks/btn/btn.css
+++ b/blocks/btn/btn.css
@@ -5,7 +5,7 @@
     height: 48px;
     background: #0278FE;
     border-radius: 4px;
-    font-family: Inter;
+    font-family: Inter-SemiBold;
     font-size: 18px;
     font-style: normal;
     font-weight: 600;
