--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,19 +1,20 @@
 @font-face {
-    src: url('/fonts/Inter-Regular.woff2') format('woff2'),
-         url('/fonts/Inter-Regular.woff') format('woff');
+    src: url('./Inter-Regular.woff2') format('woff2'),
+         url('./Inter-Regular.woff') format('woff');
     font-family: 'Inter';
     font-weight: normal;
   }
   
   @font-face {
-    src: url('/fonts/Inter-SemiBold.woff2') format('woff2'),
-         url('/fonts/Inter-SemiBold.woff') format('woff');
+    src: url('./Inter-SemiBold.woff2') format('woff2'),
+         url('./Inter-SemiBold.woff') format('woff');
     font-family: 'Inter-SemiBold';
   }
 
   @font-face {
-    src: url('/fonts/Inter-Black.woff2') format('woff2'),
-         url('/fonts/Inter-Black.woff') format('woff');
+    src:  
+          url('./Inter-Black.woff2') format('woff2'),
+         url('./Inter-Black.woff') format('woff');
     font-family: 'Inter-Black';
 
   }
