--- a/blocks/intro/__paragraph/intro__paragraph.css
+++ b/blocks/intro/__paragraph/intro__paragraph.css
@@ -1,5 +1,5 @@
 .intro__paragraph {
-    font-family: Inter;
+    font-family: Inter, sans-serif;;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
