--- a/blocks/places/__artist-name/places__artist-name.css
+++ b/blocks/places/__artist-name/places__artist-name.css
@@ -1,5 +1,5 @@
 .places__artist-name {
-    font-family: Inter;
+    font-family: Inter, sans-serif;;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
