--- a/blocks/places/__artist-title/places__artist-title.css
+++ b/blocks/places/__artist-title/places__artist-title.css
@@ -1,5 +1,5 @@
 .places__artist-title {
-    font-family: Inter;
+    font-family: Inter, sans-serif;;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
