--- a/blocks/places/__description-item/places__description-item.css
+++ b/blocks/places/__description-item/places__description-item.css
@@ -1,5 +1,5 @@
 .places__description-item {
-    font-family: Inter;
+    font-family: Inter, sans-serif;;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
