--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -3,3 +3,12 @@
     height: 70px;
     padding-top: 34px;
 }
+
+
+@media screen and (max-width: 320px){
+    .logo {
+        max-width: 200px;
+        padding-top: 20px;
+        margin: auto;
+    }
+}
