--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,16 @@
     margin: 92px auto  0;
     padding-bottom: 24px;
 }
+
+@media screen and (max-width: 768px){
+    .footer  {
+    margin-top: 88px;
+
+    }
+}
+
+@media screen and (max-width: 320px){
+    .footer  {
+        margin-top: 64px;
+    }
+}
