--- a/blocks/cover/__info/cover__info.css
+++ b/blocks/cover/__info/cover__info.css
@@ -1,7 +1,7 @@
 .cover__info {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     gap: 32px;
 
 }
