--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -18,12 +18,12 @@
 @media screen and (max-width: 768px){
     .cover  {
         margin: 64px auto 0;
-        height: 746px;
+        min-height: 746px;
     }
 }
 
 @media screen and (max-width: 320px){
     .cover  {
-        height: 254px;
+        min-height: 254px;
     }
 }
