--- a/blocks/description/__title/description__title.css
+++ b/blocks/description/__title/description__title.css
@@ -1,8 +1,8 @@
 .description__title {
-    font-family: Inter-Black, sans-serif;;
+    font-family: Inter, sans-serif;;
     font-size: 96px;
     font-weight: 900;
-    line-height: 86%;
+    line-height: 100px;
     max-width: 793px;
     text-align: center;
     margin: 0;
