--- a/blocks/galery/__list/galery__list.css
+++ b/blocks/galery/__list/galery__list.css
@@ -1,14 +1,15 @@
-.galery {
+.galery__list {
     display: grid;
     grid-template-columns: repeat(4, auto);
     grid-template-rows: repeat(2, auto);
     grid-gap: 16px;
     margin: 118px 48px 92px;
     max-width: 1184px;
+    list-style: none;
 }
 
 @media screen and (max-width: 768px){
-    .galery {
+    .galery__list {
         grid-template-columns: repeat(2, auto);
         grid-template-rows: repeat(4, auto);
         margin: 90px 24px 88px;
@@ -16,10 +17,10 @@
 }
 
 @media screen and (max-width: 320px){
-    .galery {
+    .galery__list {
         grid-template-columns: auto;
         grid-template-rows: auto;
-        margin: 90px 16px 62px;
+        margin: 90px 16px 82px;
         grid-gap: 12px;
     }
 }
