--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,5 +1,5 @@
 .places__title {
-    font-family: Inter-Black, sans-serif;;
+    font-family: Inter, sans-serif;;
     font-size: 72px;
     font-style: normal;
     font-weight: 900;
