--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,20 +1,21 @@
 @font-face {
+    font-family: 'Inter';
     src: url('./Inter-Regular.woff2') format('woff2'),
          url('./Inter-Regular.woff') format('woff');
-    font-family: 'Inter';
     font-weight: normal;
   }
   
   @font-face {
+    font-family: 'Inter';
     src: url('./Inter-SemiBold.woff2') format('woff2'),
          url('./Inter-SemiBold.woff') format('woff');
-    font-family: 'Inter-SemiBold';
+    font-weight: 600;
   }
 
   @font-face {
+    font-family: 'Inter';
     src:  
           url('./Inter-Black.woff2') format('woff2'),
          url('./Inter-Black.woff') format('woff');
-    font-family: 'Inter-Black';
-
+    font-weight: 900;
   }
