--- a/blocks/galery/__list/galery__list.css
+++ b/blocks/galery/__list/galery__list.css
@@ -6,6 +6,7 @@
     margin: 118px 48px 92px;
     max-width: 1184px;
     list-style: none;
+    padding: 0;
 }
 
 @media screen and (max-width: 768px){
