bugfix: remove all double semicolon

--- a/blocks/cover/__description/cover__description.css
+++ b/blocks/cover/__description/cover__description.css
@@ -1,6 +1,6 @@
 .cover__description {
     top: 351px;
-    font-family: Inter, sans-serif;;
+    font-family: Inter, sans-serif;
     font-size: 18px;
     font-style: normal;
     text-align: center;
