--- a/blocks/description/__title/description__title.css
+++ b/blocks/description/__title/description__title.css
@@ -1,5 +1,5 @@
 .description__title {
-    font-family: Inter, sans-serif;;
+    font-family: Inter, sans-serif;
     font-size: 96px;
     font-weight: 900;
     line-height: 100px;
