--- a/blocks/description/__img/description__img.css
+++ b/blocks/description/__img/description__img.css
@@ -1,7 +1,6 @@
 .description__img {
-    max-width: 100%;
-    width: 984px;
-    height: 615px;
+    max-width: 984px;
+    max-height: 615px;
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
   margin-top: 32px;
@@ -10,6 +9,8 @@
 @media screen and (max-width: 768px){
   .description__img {
       margin-top: 4px;
+      max-width: 100%;
+      max-height: 480px;
   }
 }
 
