--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,13 @@
 .header {
-    display: grid;
+    display: flex;
+    justify-content: center;
     place-items: center;
+    padding: 34px 0 0;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 320px){
+    .header {
+        padding: 20px 0 0;
+    }
 }
