--- a/blocks/places/__description-item/places__description-item.css
+++ b/blocks/places/__description-item/places__description-item.css
@@ -25,6 +25,8 @@
 
 @media screen and (max-width: 320px){
     .places__description-item  {
+        font-size: 16px;
+        line-height: 26px;
         margin: auto 16px;
     }
 }
