--- a/blocks/description/__img/description__img.css
+++ b/blocks/description/__img/description__img.css
@@ -4,6 +4,7 @@
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
   margin-top: 32px;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px){
