--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -12,6 +12,13 @@
     margin: 0;
 }
 
+@media screen and (max-width: 1100px){
+    .places__title {
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
 @media screen and (max-width: 768px){
     .places__title {
         font-size: 42px;
